dataset1235/2025-2/1153765216/users/1937138466/executions/2814675586_208040576.log
== SUBMISSION (2025-08-26 19:15:36)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:23:57)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:36:59)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:23:56)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:23:30)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:53)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:54)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:36:59)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:32)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:45)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:46)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:35)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:29:56)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:33)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:36:59)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:23:59)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:36:59)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:34)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:54)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:30:22)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:23:54)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:31)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:36)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:44)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:50:23)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:50:23)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:30:12)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:37)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preco: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preco: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preco: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preco: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preco: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preco: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:36:59)
-- CODE: 
preco = float(input("Informe o preco: "))
preco_final = (15 / 100) * preco
print(preco_final))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 3
    print(preco_final))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:45)
-- CODE: 
preco = float(input("Informe o preço: "))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe o preço: 180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe o preço: 15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe o preço: 2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe o preço: 1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe o preço: 30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe o preço: 3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
